--- a/10_Pattern_challenges/Number_patterns.ipynb
+++ b/10_Pattern_challenges/Number_patterns.ipynb
@@ -551,21 +551,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter number of rows: 6\n",
-      "  3\n",
-      " 32\n",
-      "321\n",
-      "321\n",
-      " 32\n",
-      "  3\n",
-      "   \n"
+      "Enter number of rows: 7\n",
+      "   4\n",
+      "  43\n",
+      " 432\n",
+      "4321\n",
+      " 432\n",
+      "  43\n",
+      "   4\n",
+      "    \n"
      ]
     }
    ],
@@ -641,7 +642,6 @@
     "    for k in range(1,i-1):\n",
     "        print(num-2, end='')        ## loop to make second half tringle\n",
     "        num-=1\n",
-    "        \n",
     "    print()\n"
    ]
   },
@@ -680,8 +680,70 @@
     "    for k in range(1,i):\n",
     "        print(num+2, end='')        ## loop to make second half tringle\n",
     "        num+=1\n",
-    "        \n",
     "    print()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter number of rows: 7\n",
+      "   1\n",
+      "  222\n",
+      " 33333\n",
+      "4444444\n",
+      " 33333\n",
+      "  222\n",
+      "   1\n",
+      "Enter number of rows: 8\n",
+      "   1\n",
+      "  222\n",
+      " 33333\n",
+      "4444444\n",
+      "4444444\n",
+      " 33333\n",
+      "  222\n",
+      "   1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 21.Pattern\n",
+    "def upper_pattern(n):\n",
+    "    '''upper pattern logic,common for both'''\n",
+    "    for i in range(n):\n",
+    "        for j in range(n-i-1):\n",
+    "            print(' ', end='')\n",
+    "\n",
+    "        for k in range(1,(2*i+2)):\n",
+    "            print(i+1, end='')\n",
+    "        print()\n",
+    "\n",
+    "def lower_pattern(n,flag):\n",
+    "    '''lower pattern logic'''\n",
+    "    for i in range(n):\n",
+    "        for j in range(i+flag):\n",
+    "            print(' ', end='')\n",
+    "\n",
+    "        for k in range((2*n-1)-2*i ,0,-1):\n",
+    "            print(n-i, end='')\n",
+    "        print()\n",
+    "\n",
+    "for i in range(2):    \n",
+    "    row= int(input('Enter number of rows: '))\n",
+    "    if row%2==0:\n",
+    "        n= (row)//2           ## for even no. of rows\n",
+    "        upper_pattern(n)\n",
+    "        lower_pattern(n,0)\n",
+    "    else:\n",
+    "        n= (row)//2+1         ## for odd no. of rows\n",
+    "        upper_pattern(n)\n",
+    "        lower_pattern(n-1,1)\n"
    ]
   },
   {
