--- a/10_Pattern_challenges/Character_Patterns.ipynb
+++ b/10_Pattern_challenges/Character_Patterns.ipynb
@@ -469,20 +469,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter number of rows: 6\n",
-      "C\n",
-      "CB\n",
-      "CBA\n",
-      "CBA\n",
-      "CB\n",
-      "C\n"
+      "Enter number of rows: 7\n",
+      "D\n",
+      "DC\n",
+      "DCB\n",
+      "DCBA\n",
+      "DCB\n",
+      "DC\n",
+      "D\n",
+      "Enter number of rows: 8\n",
+      "D\n",
+      "DC\n",
+      "DCB\n",
+      "DCBA\n",
+      "DCBA\n",
+      "DCB\n",
+      "DC\n",
+      "D\n"
      ]
     }
    ],
@@ -506,17 +516,18 @@
     "            x-=1\n",
     "        print()\n",
     "\n",
-    "        \n",
-    "row= int(input('Enter number of rows: '))\n",
-    "if row%2==0:\n",
-    "    n= (row)//2         ## for even no. of rows\n",
-    "    upper_pattern(n)\n",
-    "    lower_pattern(n+1,n)\n",
-    "        \n",
-    "else:\n",
-    "    n= (row)//2+1        ## for odd no. of rows\n",
-    "    upper_pattern(n)\n",
-    "    lower_pattern(n,n)\n"
+    "\n",
+    "for i in range(2):    \n",
+    "    row= int(input('Enter number of rows: '))\n",
+    "    if row%2==0:\n",
+    "        n= (row)//2         ## for even no. of rows\n",
+    "        upper_pattern(n)\n",
+    "        lower_pattern(n+1,n)\n",
+    "\n",
+    "    else:\n",
+    "        n= (row)//2+1        ## for odd no. of rows\n",
+    "        upper_pattern(n)\n",
+    "        lower_pattern(n,n)\n"
    ]
   },
   {
@@ -655,6 +666,37 @@
     "        n= (row)//2+1         ## for odd no. of rows\n",
     "        upper_pattern(n)\n",
     "        lower_pattern(n-1,1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter number of rows: 6\n",
+      "     A\n",
+      "    B B\n",
+      "   C   C\n",
+      "  D     D\n",
+      " E       E\n",
+      "F         F\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 21.Pattern\n",
+    "row= int(input('Enter number of rows: '))\n",
+    "for i in range(1,row+1):\n",
+    "    print(' '*(row-i), end='')\n",
+    "    if i==1:\n",
+    "        print(chr(64+i))\n",
+    "    else:\n",
+    "        print(chr(64+i), ' '*(2*i-3) , chr(64+i), sep= '' )    \n",
+    "    "
    ]
   },
   {
