--- a/10_Pattern_challenges/Number_patterns.ipynb
+++ b/10_Pattern_challenges/Number_patterns.ipynb
@@ -498,20 +498,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter number of rows: 6\n",
-      "3\n",
-      "32\n",
-      "321\n",
-      "321\n",
-      "32\n",
-      "3\n"
+      "Enter number of rows: 7\n",
+      "4\n",
+      "43\n",
+      "432\n",
+      "4321\n",
+      "432\n",
+      "43\n",
+      "4\n",
+      "Enter number of rows: 8\n",
+      "4\n",
+      "43\n",
+      "432\n",
+      "4321\n",
+      "4321\n",
+      "432\n",
+      "43\n",
+      "4\n"
      ]
     }
    ],
@@ -536,22 +546,23 @@
     "            x-=1\n",
     "        print()\n",
     "\n",
-    "        \n",
-    "row= int(input('Enter number of rows: '))\n",
-    "if row%2==0:\n",
-    "    n= (row)//2         ## for even no. of rows\n",
-    "    upper_pattern(n)\n",
-    "    lower_pattern(n+1,n)\n",
-    "        \n",
-    "else:\n",
-    "    n= (row)//2+1        ## for odd no. of rows\n",
-    "    upper_pattern(n)\n",
-    "    lower_pattern(n,n)\n"
+    "\n",
+    "for i in range(2):    \n",
+    "    row= int(input('Enter number of rows: '))\n",
+    "    if row%2==0:\n",
+    "        n= (row)//2         ## for even no. of rows\n",
+    "        upper_pattern(n)\n",
+    "        lower_pattern(n+1,n)\n",
+    "\n",
+    "    else:\n",
+    "        n= (row)//2+1        ## for odd no. of rows\n",
+    "        upper_pattern(n)\n",
+    "        lower_pattern(n,n)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -562,6 +573,16 @@
       "   4\n",
       "  43\n",
       " 432\n",
+      "4321\n",
+      " 432\n",
+      "  43\n",
+      "   4\n",
+      "    \n",
+      "Enter number of rows: 8\n",
+      "   4\n",
+      "  43\n",
+      " 432\n",
+      "4321\n",
       "4321\n",
       " 432\n",
       "  43\n",
@@ -597,15 +618,16 @@
     "        print()\n",
     "\n",
     "\n",
-    "row= int(input('Enter number of rows: '))\n",
-    "if row%2==0:\n",
-    "    n= (row)//2           ## for even no. of rows\n",
-    "    upper_pattern(n)\n",
-    "    lower_pattern(n+1,0)\n",
-    "else:\n",
-    "    n= (row)//2+1         ## for odd no. of rows\n",
-    "    upper_pattern(n)\n",
-    "    lower_pattern(n,1)\n"
+    "for i in range(2):\n",
+    "    row= int(input('Enter number of rows: '))\n",
+    "    if row%2==0:\n",
+    "        n= (row)//2           ## for even no. of rows\n",
+    "        upper_pattern(n)\n",
+    "        lower_pattern(n+1,0)\n",
+    "    else:\n",
+    "        n= (row)//2+1         ## for odd no. of rows\n",
+    "        upper_pattern(n)\n",
+    "        lower_pattern(n,1)\n"
    ]
   },
   {
@@ -744,6 +766,37 @@
     "        n= (row)//2+1         ## for odd no. of rows\n",
     "        upper_pattern(n)\n",
     "        lower_pattern(n-1,1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter number of rows: 6\n",
+      "     1\n",
+      "    2 2\n",
+      "   3   3\n",
+      "  4     4\n",
+      " 5       5\n",
+      "6         6\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 22.Pattern\n",
+    "row= int(input('Enter number of rows: '))\n",
+    "for i in range(1,row+1):\n",
+    "    print(' '*(row-i), end='')\n",
+    "    if i==1:\n",
+    "        print(i)\n",
+    "    else:\n",
+    "        print(i, ' '*(2*i-3) , i, sep= '' )    \n",
+    "    "
    ]
   },
   {
