--- a/10_Pattern_challenges/Star_Patterns.ipynb
+++ b/10_Pattern_challenges/Star_Patterns.ipynb
@@ -242,6 +242,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Enter number of rows: 9\n",
+      "*\n",
+      "**\n",
+      "***\n",
+      "****\n",
+      "*****\n",
+      "****\n",
+      "***\n",
+      "**\n",
+      "*\n",
       "Enter number of rows: 8\n",
       "*\n",
       "**\n",
@@ -270,17 +280,18 @@
     "            print('*', end='')\n",
     "        print()\n",
     "\n",
-    "        \n",
-    "row= int(input('Enter number of rows: '))\n",
-    "if row%2==0:\n",
-    "    n= (row)//2         ## for even no. of rows\n",
-    "    upper_pattern(n)\n",
-    "    lower_pattern(n+1)\n",
-    "        \n",
-    "else:\n",
-    "    n= (row)//2+1        ## for odd no. of rows\n",
-    "    upper_pattern(n)\n",
-    "    lower_pattern(n)\n"
+    "\n",
+    "for i in range(2):    \n",
+    "    row= int(input('Enter number of rows: '))\n",
+    "    if row%2==0:\n",
+    "        n= (row)//2         ## for even no. of rows\n",
+    "        upper_pattern(n)\n",
+    "        lower_pattern(n+1)\n",
+    "\n",
+    "    else:\n",
+    "        n= (row)//2+1        ## for odd no. of rows\n",
+    "        upper_pattern(n)\n",
+    "        lower_pattern(n)\n"
    ]
   },
   {
@@ -316,25 +327,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter number of rows: 6\n",
-      "  *\n",
-      " **\n",
-      "***\n",
-      "***\n",
-      " **\n",
-      "  *\n",
-      "   \n",
       "Enter number of rows: 7\n",
       "   *\n",
       "  **\n",
       " ***\n",
+      "****\n",
+      " ***\n",
+      "  **\n",
+      "   *\n",
+      "    \n",
+      "Enter number of rows: 8\n",
+      "   *\n",
+      "  **\n",
+      " ***\n",
+      "****\n",
       "****\n",
       " ***\n",
       "  **\n",
@@ -438,6 +451,37 @@
     "        n= (row)//2+1         ## for odd no. of rows\n",
     "        upper_pattern(n)\n",
     "        lower_pattern(n-1,1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter number of rows: 6\n",
+      "     *\n",
+      "    * *\n",
+      "   *   *\n",
+      "  *     *\n",
+      " *       *\n",
+      "*         *\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 12.Pattern\n",
+    "row= int(input('Enter number of rows: '))\n",
+    "for i in range(1,row+1):\n",
+    "    print(' '*(row-i), end='')\n",
+    "    if i==1:\n",
+    "        print('*')\n",
+    "    else:\n",
+    "        print('*', ' '*(2*i-3) , '*', sep= '' )    \n",
+    "    "
    ]
   },
   {
