--- a/10_Pattern_challenges/Star_Patterns.ipynb
+++ b/10_Pattern_challenges/Star_Patterns.ipynb
@@ -486,6 +486,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter number of rows: 6\n",
+      "*         *\n",
+      " *       *\n",
+      "  *     *\n",
+      "   *   *\n",
+      "    * *\n",
+      "     *\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 13.Pattern\n",
+    "row= int(input('Enter number of rows: '))\n",
+    "for i in range(row):\n",
+    "    print(' '*i, end='')\n",
+    "    if i==row-1:\n",
+    "        print('*')\n",
+    "    else:\n",
+    "        print('*', ' '*(2*row-2*i-3) , '*', sep= '' )    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
