--- a/10_Pattern_challenges/Character_Patterns.ipynb
+++ b/10_Pattern_challenges/Character_Patterns.ipynb
@@ -701,6 +701,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter number of rows: 6\n",
+      "     F\n",
+      "    E E\n",
+      "   D   D\n",
+      "  C     C\n",
+      " B       B\n",
+      "A         A\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 22.Pattern\n",
+    "row= int(input('Enter number of rows: '))\n",
+    "for i in range(1,row+1):\n",
+    "    print(' '*(row-i), end='')\n",
+    "    if i==1:\n",
+    "        print(chr(65+row-i))\n",
+    "    else:\n",
+    "        print(chr(65+row-i), ' '*(2*i-3) , chr(65+row-i), sep= '' )    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
