--- a/10_Pattern_challenges/Number_patterns.ipynb
+++ b/10_Pattern_challenges/Number_patterns.ipynb
@@ -832,6 +832,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter number of rows: 6\n",
+      "1         1\n",
+      " 2       2\n",
+      "  3     3\n",
+      "   4   4\n",
+      "    5 5\n",
+      "     6\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 24.Pattern\n",
+    "row= int(input('Enter number of rows: '))\n",
+    "for i in range(row):\n",
+    "    print(' '*i, end='')\n",
+    "    if i==row-1:\n",
+    "        print(i+1)\n",
+    "    else:\n",
+    "        print(i+1, ' '*(2*row-2*i-3) , i+1, sep= '' )    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
