Added character pattern

--- a/10_Pattern_challenges/Character_Patterns.ipynb
+++ b/10_Pattern_challenges/Character_Patterns.ipynb
@@ -732,6 +732,57 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter number of rows: 6\n",
+      "A         A\n",
+      " B       B\n",
+      "  C     C\n",
+      "   D   D\n",
+      "    E E\n",
+      "     F\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 23.Pattern\n",
+    "row= int(input('Enter number of rows: '))\n",
+    "for i in range(row):\n",
+    "    print(' '*i, end='')\n",
+    "    if i==row-1:\n",
+    "        print(chr(64+i+1))\n",
+    "    else:\n",
+    "        print(chr(64+i+1), ' '*(2*row-2*i-3) , chr(64+i+1), sep= '' )    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "not(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
