Added a new file

--- a/Regular Expression/Regex_Handson.ipynb
+++ b/Regular Expression/Regex_Handson.ipynb
@@ -119,6 +119,57 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Regular Expression 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['4', '4.000', '-1.00', '+4.54', '-23', '54', '4123456789123456', '5123', '-4567', '-8912', '-5555', '61234', '-567', '-8912', '-3456', '4123356789123456', '5133', '-3367', '-8912', '-3456', '5123', '3567', '8912', '3456', '-23', '54', '11111131', '12', '1', '555', '-7666', '555', '-5543', '555', '-3652', '555', '-7666', '555', '-7666', '321', '-555', '-4321', '123.555', '.1234', '123', '555', '1234', '321', '555', '-4321', '900', '-555', '-1234', '800', '-555', '-1234', '-321', '+9999999999', '999999', '-999', '99999', '9999']\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "  Problem Statement:\n",
+    "    You are given a string N. Your task is to verify that N is a floating point number.\n",
+    "\n",
+    "    In this task, a valid float number must satisfy all of the following \n",
+    "    requirements: Number can start with +, - or . symbol.\n",
+    "  Hint: \n",
+    "    Using Regular Expression \n",
+    "  Input:\n",
+    "    4  \n",
+    "    4.000\n",
+    "    -1.00\n",
+    "    +4.54\n",
+    "  Output:\n",
+    "    False\n",
+    "    True\n",
+    "    True\n",
+    "    True\n",
+    "\"\"\"\n",
+    "\n",
+    "import re\n",
+    "\n",
+    "f= open(\"temp\",'r')\n",
+    "contents = f.read()\n",
+    "# print(contents)\n",
+    "\n",
+    "x= re.findall(r\"[-+]?\\d*\\.?\\d+\", contents)\n",
+    "print(x)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
