--- a/Regular Expression/Regex_Handson.ipynb
+++ b/Regular Expression/Regex_Handson.ipynb
@@ -170,6 +170,60 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Regular Expression 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['lara@hackerrank.com', 'brian-23@hackerrank.com', 'britts_54@hackerrank.com', 'ajeet@forsk.com', 'kunal-23@forsk.com', 'yogendra_54@forsk.com', 'SylvesterFernandes@gmail.com', 'fernandes@university.edu']\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "  Problem Statement:\n",
+    "    You are given N email addresses. \n",
+    "    Your task is to print a list containing only valid email addresses in alphabetical order.\n",
+    "    Valid email addresses must follow these rules:\n",
+    "\n",
+    "    It must have the username@websitename.extension format type.\n",
+    "    The username can only contain letters, digits, dashes and underscores.\n",
+    "    The website name can only have letters and digits.\n",
+    "    The minimum length is 2 and maximum length of the extension is 4. \n",
+    "  Hint: \n",
+    "    Using Regular Expression \n",
+    "  Input:\n",
+    "    lara@hackerrank.com\n",
+    "    brian-23@hackerrank.com\n",
+    "    britts_54@hackerrank.com\n",
+    "  Output:\n",
+    "    ['brian-23@hackerrank.com', 'britts_54@hackerrank.com', 'lara@hackerrank.com']\n",
+    "\"\"\"\n",
+    "\n",
+    "import re\n",
+    "\n",
+    "with open('temp','r') as fp:\n",
+    "    content= fp.read()\n",
+    "\n",
+    "pattern= r'[\\w-]+@[a-zA-Z0-9]+\\..{2,4}'\n",
+    "\n",
+    "x= re.findall(pattern, content)\n",
+    "\n",
+    "print(x)\n",
+    "# print(len(x))\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
