--- a/Regular Expression/Regex_Handson.ipynb
+++ b/Regular Expression/Regex_Handson.ipynb
@@ -224,11 +224,72 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Regular Expression 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Valid credit vard: \n",
+      "['4123456789123456', '5123-4567-8912-5555', '4123356789123456']\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "  Problem Statement:\n",
+    "    You and Virat are good friends. \n",
+    "    Yesterday, Virat received credit cards from ABCD Bank. \n",
+    "    He wants to verify whether his credit card numbers are valid or not. \n",
+    "    You happen to be great at regex so he is asking for your help!\n",
+    "\n",
+    "    A valid credit card from ABCD Bank has the following characteristics:\n",
+    "\n",
+    "    It must start with a '4', '5' or ' 6'.\n",
+    "    It must contain exactly 16 digits\n",
+    "    It must only consist of digits (0-9)\n",
+    "    It may have digits in groups of 4, separated by one hyphen \"-\"\n",
+    "    It must NOT use any other separator like ', ' , '_', etc\n",
+    "    It must NOT have 4 or more consecutive repeated digits \n",
+    " \n",
+    "  Hint: \n",
+    "    Using Regular Expression \n",
+    "  Input:\n",
+    "    4123456789123456\n",
+    "    5123-4567-8912-3456\n",
+    "    61234-567-8912-3456\n",
+    "    4123356789123456\n",
+    "    5133-3367 -8912-3456\n",
+    "    5123 - 3567 - 8912 - 3456\n",
+    "  Output:\n",
+    "    Valid\n",
+    "    Valid\n",
+    "    Invalid\n",
+    "    Valid\n",
+    "    Invalid\n",
+    "    Invalid\n",
+    "\"\"\"\n",
+    "\n",
+    "import re\n",
+    "with open('temp','r') as fp:\n",
+    "    content= fp.read()\n",
+    "\n",
+    "pattern= r\"[456]\\d{3}-?\\d{4}-?\\d{4}-?\\d{4}\"\n",
+    "\n",
+    "x= re.findall(pattern, content)\n",
+    "\n",
+    "print(\"Valid credit vard: \")\n",
+    "print(x)\n"
+   ]
   }
  ],
  "metadata": {
