Added a new file

--- a/Regular Expression/Regex_Handson.ipynb
+++ b/Regular Expression/Regex_Handson.ipynb
@@ -290,6 +290,125 @@
     "print(\"Valid credit vard: \")\n",
     "print(x)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Post Codes UK"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Invalid Patterns:\n",
+      " ['TIM E22', 'A B1 A22', 'BBC 007']\n",
+      "\n",
+      "Valid Patterns:\n",
+      "['SW1A 0AA', 'SW1A 1AA', 'SW1A 2AA', 'BX3 2BB', 'DH98 1BT', 'N1 9GU', 'E98 1TT', 'EC2N 2DB', 'SE9 2UG', 'N1 0UY', 'EC1V 8DS', 'WC1X 9DT', 'B42 1LG', 'B28 9AD', 'W12 7RJ']\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "  Problem Statement:\n",
+    "    We write an expression, which is capable of recognizing the postal codes or postcodes of the UK.\n",
+    "\n",
+    "    Postcode units consist of between five and seven characters, \n",
+    "    which are separated into two parts by a space. \n",
+    "    \n",
+    "    The two to four characters before the space represent the so-called outward \n",
+    "    code or out code intended to direct mail from the sorting office to the delivery office. \n",
+    "    \n",
+    "    The part following the space, which consists of a digit followed by two uppercase characters, \n",
+    "    comprises the so-called inward code, which is needed to sort mail at the final delivery office. \n",
+    "    \n",
+    "    The last two uppercase characters do not use the letters CIKMOV, \n",
+    "    so as not to resemble digits or each other when hand-written.\n",
+    "\n",
+    "    The outward code can have the form: One or two uppercase characters, \n",
+    "    followed by either a digit or the letter R, \n",
+    "    optionally followed by an uppercase character or a digit. \n",
+    "    (We do not consider all the detailed rules for postcodes, \n",
+    "    i.e only certain character sets are valid depending on the position \n",
+    "    and the context.)    \n",
+    "  Hint: \n",
+    "    Using Regular Expression \n",
+    "  Input:\n",
+    "      example_codes = [\"SW1A 0AA\", # House of Commons\n",
+    "                 \"SW1A 1AA\", # Buckingham Palace\n",
+    "                 \"SW1A 2AA\", # Downing Street\n",
+    "                 \"BX3 2BB\", # Barclays Bank\n",
+    "                 \"DH98 1BT\", # British Telecom\n",
+    "                 \"N1 9GU\", # Guardian Newspaper\n",
+    "                 \"E98 1TT\", # The Times\n",
+    "                 \"TIM E22\", # a fake postcode\n",
+    "                 \"A B1 A22\", # not a valid postcode\n",
+    "                 \"EC2N 2DB\", # Deutsche Bank\n",
+    "                 \"SE9 2UG\", # University of Greenwhich\n",
+    "                 \"N1 0UY\", # Islington, London\n",
+    "                 \"EC1V 8DS\", # Clerkenwell, London\n",
+    "                 \"WC1X 9DT\", # WC1X 9DT\n",
+    "                 \"B42 1LG\", # Birmingham\n",
+    "                 \"B28 9AD\", # Birmingham\n",
+    "                 \"W12 7RJ\", # London, BBC News Centre\n",
+    "                 \"BBC 007\" # a fake postcode\n",
+    "                ]\n",
+    "\"\"\"\n",
+    "\n",
+    "import re\n",
+    "pattern= re.compile(\"[A-Z]{1,2}\\d{1,2}[A-Z]?\\s\\d[^CIKMOV]{2}\")\n",
+    "\n",
+    "example_codes = [\"SW1A 0AA\", # House of Commons\n",
+    "                 \"SW1A 1AA\", # Buckingham Palace\n",
+    "                 \"SW1A 2AA\", # Downing Street\n",
+    "                 \"BX3 2BB\", # Barclays Bank\n",
+    "                 \"DH98 1BT\", # British Telecom 11111\n",
+    "                 \"N1 9GU\", # Guardian Newspaper\n",
+    "                 \"E98 1TT\", # The Times 111\n",
+    "                 \"TIM E22\", # a fake postcode\n",
+    "                 \"A B1 A22\", # not a valid postcode\n",
+    "                 \"EC2N 2DB\", # Deutsche Bank\n",
+    "                 \"SE9 2UG\", # University of Greenwhich\n",
+    "                 \"N1 0UY\", # Islington, London\n",
+    "                 \"EC1V 8DS\", # Clerkenwell, London\n",
+    "                 \"WC1X 9DT\", # WC1X 9DT\n",
+    "                 \"B42 1LG\", # Birmingham 111\n",
+    "                 \"B28 9AD\", # Birmingham 111\n",
+    "                 \"W12 7RJ\", # London, BBC News Centre 111\n",
+    "                 \"BBC 007\" # a fake postcode\n",
+    "                ]\n",
+    "\n",
+    "invalid_st= [pat  for pat in example_codes if pattern.search( pat ) is None]\n",
+    "print('Invalid Patterns:\\n',invalid_st)\n",
+    "\n",
+    "# '''Or '''\n",
+    "# for pat in example_codes:\n",
+    "#     x= re.search(pattern,  pat )\n",
+    "#     if x is None:\n",
+    "#         invalid_st.append(pat)\n",
+    "\n",
+    "'''Or'''\n",
+    "\n",
+    "x= ''.join(example_codes)    ## combine list into string\n",
+    "valid_st= pattern.findall(x)\n",
+    "        \n",
+    "print('\\nValid Patterns:')\n",
+    "print(valid_st)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
