--- a/OOPS/Class_Objects.ipynb
+++ b/OOPS/Class_Objects.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -63,6 +63,7 @@
      "text": [
       "Dog have 4 legs\n",
       "Cat have 4 legs\n",
+      "\n",
       "Cow have 4 legs\n"
      ]
     }
@@ -79,8 +80,83 @@
     "Animal.walk('Cat')\n",
     "\n",
     "'''or'''\n",
+    "print()\n",
     "a= Animal()      ## can access class method by both method, using class name\n",
     "a.walk('Cow')    ## or with object\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Count number of objects"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "count=  5\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "class track:\n",
+    "    count=0    ## static variable\n",
+    "    \n",
+    "    def __init__(self):     ## constructor\n",
+    "        track.count= track.count+1\n",
+    "        \n",
+    "    @classmethod         ## class method\n",
+    "    def getcount(cls):\n",
+    "        print('count= ',cls.count)\n",
+    "        \n",
+    "t1= track()\n",
+    "t1= track()\n",
+    "t1= track()\n",
+    "t1= track()\n",
+    "t1= track() \n",
+    "track.getcount()   ## calling class method\n",
+    "print( track.count )    ## retriving static variable using class name\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### self vs cls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Instance method:  10 Durga\n"
+     ]
+    }
+   ],
+   "source": [
+    "## first argument always is self for instance variable\n",
+    "\n",
+    "class test:\n",
+    "    def m1(cls,self):    ## here keyword is changed (swapped each other) but internal behaviour is same\n",
+    "        cls.x= 10          ## now cls.x as instance variable  \n",
+    "        print('Instance method: ',cls.x, self)    ## self as normal variable\n",
+    "        \n",
+    "t= test()\n",
+    "t.m1('Durga')\n"
    ]
   },
   {
