--- a/OOPS/Class_Objects.ipynb
+++ b/OOPS/Class_Objects.ipynb
@@ -160,6 +160,105 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Static method"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello buddy\n",
+      "hello buddy\n"
+     ]
+    }
+   ],
+   "source": [
+    "# static method behaves as general purpose method\n",
+    "class test:\n",
+    "    def m1():       ## static method\n",
+    "        print('hello buddy')\n",
+    "        \n",
+    "t= test\n",
+    "t.m1()       ## method can be called by both ways\n",
+    "test.m1()    ## using object as well as with class name\n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Getter and Setter function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23\n",
+      "45\n",
+      "50\n",
+      "vidhya\n",
+      "vidhya\n",
+      "vidhya\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "class student:\n",
+    "    school= 'vidhya'    ## static variable\n",
+    "    \n",
+    "    def __init__(self,m1,m2,m3):\n",
+    "        self.m1= m1\n",
+    "        self.m2= m2\n",
+    "        self.m3= m3\n",
+    "    \n",
+    "    def get_m1(self):    ## getting the value of instance variable\n",
+    "        return self.m1\n",
+    "\n",
+    "    def get_m2(self):\n",
+    "        return self.m2 \n",
+    "\n",
+    "    def get_m3(self):\n",
+    "        return self.m3\n",
+    "\n",
+    "    def set_m1(self,value):  ## setting(modifying) the value of instance variable\n",
+    "        self.m1= value       ## it is better to make setter function\n",
+    "    \n",
+    "    @classmethod\n",
+    "    def sch_name(cls):\n",
+    "        return cls.school\n",
+    "    \n",
+    "s1= student(23,45,34)\n",
+    "s2= student(45,65,33)\n",
+    "\n",
+    "print( s1.get_m1())\n",
+    "print( s2.get_m1())\n",
+    "\n",
+    "s1.set_m1(50)       ## call set function\n",
+    "print( s1.get_m1())\n",
+    "\n",
+    "print( s1.school )   ## can access with both class as well object\n",
+    "print( student.school )\n",
+    "\n",
+    "print( student.sch_name() )  ## calling class method\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
