--- a/OOPS/Class_Objects.ipynb
+++ b/OOPS/Class_Objects.ipynb
@@ -259,6 +259,115 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Inner class 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name: Ajay \n",
+      "Rollno.: 12\n",
+      "\n",
+      "Laptop Configuration:\n",
+      "HP i5 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"class -> class -> then create object of inner class\"\n",
+    "\n",
+    "class student:\n",
+    "    def __init__(self, name, rollno):   ## constructor\n",
+    "        self.name= name\n",
+    "        self.rollno= rollno\n",
+    "        \n",
+    "    def show(self):     ## instance method\n",
+    "        print('Name:',self.name, '\\nRollno.:',self.rollno)\n",
+    "        l1.show()       ## calling the laptop method show\n",
+    "    \n",
+    "    class laptop:    ## inner class\n",
+    "        def __init__(self):     ## inner class constructor\n",
+    "            self.brand= 'HP'\n",
+    "            self.proc= 'i5'\n",
+    "            self.ram= 4\n",
+    "        \n",
+    "        def show(self):      ## inner class instance method\n",
+    "            print('\\nLaptop Configuration:')\n",
+    "            print(self.brand, self.proc, self.ram)\n",
+    "            \n",
+    "\n",
+    "s1= student('Ajay',12)    ## creating objects\n",
+    "s2= student('Rekha',13)\n",
+    "\n",
+    "l1= student.laptop()  ## can access inner class\n",
+    "s1.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Inner class 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name: Rekha \n",
+      "Rollno.: 13\n",
+      "\n",
+      "Laptop Configuration:\n",
+      "HP i5 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"object--> object --> then call method\"\n",
+    "\n",
+    "class student:\n",
+    "    def __init__(self, name,rollno):   ## constructor\n",
+    "        self.name= name\n",
+    "        self.rollno= rollno\n",
+    "        self.lap= self.laptop()   ## creating object for inner class laptop, lap is reference variable\n",
+    "        \n",
+    "    def show(self):\n",
+    "        print('Name:',self.name, '\\nRollno.:',self.rollno)\n",
+    "        self.lap.show()     ## calling the laptop method show\n",
+    "    \n",
+    "    class laptop:       ## inner class\n",
+    "        def __init__(self):      ## inner class constructor\n",
+    "            self.brand= 'HP'\n",
+    "            self.proc= 'i5'\n",
+    "            self.ram= 4\n",
+    "        \n",
+    "        def show(self):\n",
+    "            print('\\nLaptop Configuration:')\n",
+    "            print(self.brand, self.proc, self.ram)\n",
+    "            \n",
+    "\n",
+    "s1= student('Ajay',12)\n",
+    "s2= student('Rekha',13)\n",
+    "\n",
+    "s2.show()\n",
+    "       "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
