--- a/OOPS/Inheritance.ipynb
+++ b/OOPS/Inheritance.ipynb
@@ -61,6 +61,65 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1. super_init()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bird is ready\n",
+      "Penguin is ready\n",
+      "Penguin\n",
+      "Swim faster\n",
+      "Run faster\n"
+     ]
+    }
+   ],
+   "source": [
+    "'''\n",
+    "we use super() function before __init__() method. This is because we want to pull\n",
+    "the content of __init__() method from the parent class into the child class.\n",
+    "'''\n",
+    "\n",
+    "# parent class\n",
+    "class Bird:\n",
+    "    def __init__(self):\n",
+    "        print(\"Bird is ready\")\n",
+    "\n",
+    "    def whoisThis(self):\n",
+    "        print(\"Bird\")\n",
+    "\n",
+    "    def swim(self):\n",
+    "        print(\"Swim faster\")\n",
+    "\n",
+    "# child class\n",
+    "class Penguin(Bird):\n",
+    "    def __init__(self):\n",
+    "        super().__init__()         # call super() function\n",
+    "        print(\"Penguin is ready\")\n",
+    "\n",
+    "    def whoisThis(self):\n",
+    "        print(\"Penguin\")\n",
+    "\n",
+    "    def run(self):\n",
+    "        print(\"Run faster\")\n",
+    "\n",
+    "peggy = Penguin()\n",
+    "peggy.whoisThis()\n",
+    "peggy.swim()\n",
+    "peggy.run()\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
