--- a/OOPS/Inheritance.ipynb
+++ b/OOPS/Inheritance.ipynb
@@ -120,6 +120,73 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2. super_init()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "aayushi johari\n",
+      "1000000 \n",
+      " aayushi.johari@company.com\n",
+      "Raise increment: 1.1 times\n",
+      "Incremented salary: 1100000\n"
+     ]
+    }
+   ],
+   "source": [
+    "'''Now if I want to add one more attribute, say a programming language in our init \n",
+    "method, but it doesn’t exist in our parent class. Is there any solution for that? \n",
+    "Yes! we can copy the entire employee logic and do that but it will again increase \n",
+    "the code size.\n",
+    "\n",
+    "super.__init__(first, last, pay) which inherits the properties from the base\n",
+    "class. To conclude, inheritance is used to reuse the code and reduce the \n",
+    "complexity of a program.\n",
+    "'''\n",
+    "\n",
+    "class employee:\n",
+    "    num_employee=0      ## static variable\n",
+    "    raise_amount=1.04     ## 4% increment in salary for employee \n",
+    "    def __init__(self, first, last, sal):\n",
+    "        self.first= first\n",
+    "        self.last= last\n",
+    "        self.sal= sal\n",
+    "        self.email= first + '.' + last + '@company.com'\n",
+    "        employee.num_employee+=1\n",
+    "        \n",
+    "    def fullname (self):\n",
+    "        return '{} {}'.format(self.first, self.last)\n",
+    "    \n",
+    "    def apply_raise (self):\n",
+    "        self.sal= int(self.sal* (developer.raise_amount) ) ## static variable called by developer class\n",
+    "        return self.sal\n",
+    "\n",
+    "class developer(employee):   ## inheritance\n",
+    "    raise_amount = 1.10      ## 10% increment in salary for developer\n",
+    "    def __init__(self, first, last, sal, prog_lang):\n",
+    "        super().__init__(first, last, sal)\n",
+    "        self.prog_lang= prog_lang  \n",
+    "\n",
+    "\n",
+    "emp_1=developer('aayushi', 'johari', 1000000,'Python')  ## developer class object\n",
+    "print(emp_1.fullname() )\n",
+    "print(emp_1.sal,'\\n', emp_1.email )\n",
+    "print('Raise increment:',emp_1.raise_amount,'times')\n",
+    "\n",
+    "print('Incremented salary:',emp_1.apply_raise() )\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
