--- a/OOPS/Operator_Overloading.ipynb
+++ b/OOPS/Operator_Overloading.ipynb
@@ -77,6 +77,50 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### '+' operator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1,5)\n"
+     ]
+    }
+   ],
+   "source": [
+    "'''\n",
+    "when you do p1 + p2, Python will call p1.__add__(p2) which in turn is \n",
+    "Point.__add__(p1,p2). Similarly, we can overload other operators as well. \n",
+    "'''\n",
+    "\n",
+    "class Point:\n",
+    "    def __init__(self, x = 0, y = 0):\n",
+    "        self.x = x\n",
+    "        self.y = y\n",
+    "    \n",
+    "    def __str__(self):\n",
+    "        return \"({0},{1})\".format(self.x,self.y)\n",
+    "    \n",
+    "    def __add__(self,other):\n",
+    "        x = self.x + other.x\n",
+    "        y = self.y + other.y\n",
+    "        return Point(x,y)\n",
+    "\n",
+    "p1 = Point(2,3)\n",
+    "p2 = Point(-1,2)\n",
+    "print(p1 + p2)    # use '+' as operator overloading \n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
