--- a/OOPS/Operator_Overloading.ipynb
+++ b/OOPS/Operator_Overloading.ipynb
@@ -121,6 +121,87 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### '<' operator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "class Point:\n",
+    "    def __init__(self, x = 0, y = 0):\n",
+    "        self.x = x\n",
+    "        self.y = y\n",
+    "    \n",
+    "    def __str__(self):\n",
+    "        return \"({0},{1})\".format(self.x,self.y)\n",
+    "    \n",
+    "    def __lt__(self,other):\n",
+    "        self_mag = (self.x ** 2) + (self.y ** 2)\n",
+    "        other_mag = (other.x ** 2) + (other.y ** 2)\n",
+    "        return self_mag < other_mag\n",
+    "\n",
+    "Point(1,1) < Point(-2,-3)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Point(1,1) < Point(0.5,-0.2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Point(1,1) < Point(1,1)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
