--- a/OOPS/Inheritance.ipynb
+++ b/OOPS/Inheritance.ipynb
@@ -187,6 +187,63 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Polygon"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter side 1 : 3\n",
+      "Enter side 2 : 5\n",
+      "Enter side 3 : 4\n",
+      "Side 1 is 3.0\n",
+      "Side 2 is 5.0\n",
+      "Side 3 is 4.0\n",
+      "The area of the triangle is 6.00\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Polygon:\n",
+    "    def __init__(self, no_of_sides):\n",
+    "        self.n = no_of_sides\n",
+    "        self.sides = [0 for i in range(no_of_sides)]\n",
+    "\n",
+    "    def inputSides(self):\n",
+    "        self.sides = [float(input(\"Enter side \"+str(i+1)+\" : \")) for i in range(self.n)]\n",
+    "\n",
+    "    def dispSides(self):\n",
+    "        for i in range(self.n):\n",
+    "            print(\"Side\",i+1,\"is\",self.sides[i])\n",
+    "            \n",
+    "class Triangle(Polygon):\n",
+    "    def __init__(self):\n",
+    "        Polygon.__init__(self,3)\n",
+    "\n",
+    "    def findArea(self):\n",
+    "        a, b, c = self.sides\n",
+    "        # calculate the semi-perimeter\n",
+    "        s = (a + b + c) / 2\n",
+    "        area = (s*(s-a)*(s-b)*(s-c)) ** 0.5\n",
+    "        print('The area of the triangle is %0.2f' %area)\n",
+    "\n",
+    "        \n",
+    "t = Triangle()\n",
+    "t.inputSides()\n",
+    "t.dispSides()\n",
+    "t.findArea()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
